# fastapi-book-app

./: .gitignore  README.md  alembic.ini  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 225ac52e5af0_initial.py
app/: __init__.py  database.py  models.py  services.py
app/api/endpoint/: address.py  swagger.py  token.py  user.py
app/models/: __init__.py  address.py  book.py  user.py
app/routers/: api_book.py  api_user.py
app/schemas/: book.py  user.py
app/tests/: test_api.py
app/utils/: utils.py
